# cs149-asst

asst1/: CMakeLists.txt
asst1/prog1_mandelbrot_threads/: main.cpp  mandelbrotSerial.cpp  mandelbrotThread.cpp
asst1/prog2_vecintrin/: main.cpp
asst1/prog3_mandelbrot_ispc/: main.cpp  mandelbrot.ispc
